--- a/index.css
+++ b/index.css
@@ -32,6 +32,14 @@ body {
     height: 500px;
     width: 500px;
 }
+.flex {
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    justify-content: center;
+    align-items: stretch;
+
+}
 /* styling for the footer*/
 footer {
     display: flex;
